# pycel

./: README.md  hello.py  manifest.xml  package-lock.json  pyproject.toml  server.py  test.py
src/taskpane/: taskpane.css  taskpane.html  taskpane.js
