[project]
name = "pycel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.114.2",
    "matplotlib>=3.9.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.2",
    "pydantic>=2.9.1",
    "statsforecast>=1.7.7.1",
    "utilsforecast>=0.2.5",
    "uvicorn>=0.30.6",
]
